package Entity;

public class FixedPriceListing {
}
